2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Fix build

        * WebCoreSupport/ChromeClientGtk.h:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Build fix for contentsSizeChanged

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::contentsSizeChanged):
        * WebCoreSupport/ChromeClientGtk.h:

2009-01-04  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Make the gtk port build with the new fixedLayoutSize feature

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::transitionToCommittedForNewPage):

2009-01-03  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        [GTK] Fix the reference counting of WebKitWebFrames
        
        The ownership is the following: WebKitWebView owns a WebCore::Page.
        WebKitWebView is creating one WebKitWebFrame which will be the
        mainFrame of the WebCore::Page (having the reference on the Frame).
        
        The FrameLoaderClient has the reference of the WebKitWebFrame for
        the main frame and also any other frame. This means when the
        WebCore::Frame goes away the FrameLoaderClient will go away which
        will normally remove the last reference of the WebKitWebFrame. Because
        an API user might have g_object_ref'ed the WebKitWebFrame null
        checks had to be added to WebKitWebFrame.
        
        For WebCore::Frames created by the FrameLoaderClient the ownership
        will be passed down to the FrameTree, the WebKitWebFrame is not holding
        a reference to the WebCore::Frame.
        
        Do not g_object_unref the mainFrame in the destructor of the
        WebKitWebFrame as this will happen from within the WebCore::Page
        destruction. Do not hold a reference to the WebCore::Frame (circle) in