@@ -44,6 +44,7 @@
 extern "C" {
 bool webkit_web_frame_pause_animation(WebKitWebFrame* frame, const gchar* name, double time, const gchar* element);
 bool webkit_web_frame_pause_transition(WebKitWebFrame* frame, const gchar* name, double time, const gchar* element);
+unsigned int webkit_web_frame_number_of_active_animations(WebKitWebFrame* frame);
 }
 
 LayoutTestController::~LayoutTestController()
@@ -297,4 +298,9 @@ bool LayoutTestController::pauseTransitionAtTimeOnElementWithId(JSStringRef prop
     gchar* name = JSStringCopyUTF8CString(propertyName);
     gchar* element = JSStringCopyUTF8CString(elementId);
     return webkit_web_frame_pause_transition(mainFrame, name, time, element);
+}
+
+unsigned LayoutTestController::numberOfActiveAnimations() const
+{
+    return webkit_web_frame_number_of_active_animations(mainFrame);
 }
